--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MyLogin</string>
+    <string-array name="spinner_options">
+        <item>Contact</item>
+        <item>Volver al login</item>
+        <item>Ayuda</item>
+    </string-array>
 </resources>
